--- a/Ulimate_inc_challenge.ipynb
+++ b/Ulimate_inc_challenge.ipynb
@@ -34,10 +34,7 @@
     "plt.style.use('seaborn')\n",
     "import seaborn as sns\n",
     "# time-series imports\n",
-    "from datetime import datetime\n",
-    "from pandas.tseries.offsets import CustomBusinessHour\n",
-    "from pandas.tseries.holiday import USFederalHolidayCalendar\n",
-    "\n"
+    "from datetime import datetime"
    ]
   },
   {
@@ -86,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x26d81667cf8>]"
+       "[<matplotlib.lines.Line2D at 0x1d9ad8cde80>]"
       ]
      },
      "execution_count": 3,
@@ -119,15 +116,24 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\">\n",
-    "<strong>It does look like there is an underlying pattern in the data, but it is hard to see at this scale.  Therefore, I will do two things\n",
+    "<strong>It does look like there is an underlying pattern in the data, but it is hard to see at this scale.  \n",
+    "    </strong>\n",
+    "</div>\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<H3> Better understand time-series data </H3>\n",
     "    <ol>\n",
     "        <li>Look at the entire time-series with larger chunksize</li>\n",
     "        <li>Look at specific days separately</li>\n",
     "        <li>Find the busiest time of day</li>\n",
     "    </ol>\n",
-    "    </strong>\n",
-    "</div>\n",
-    "    "
+    "</div>"
    ]
   },
   {
@@ -181,6 +187,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<H3> Find hourly trends by day of week</H3>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -212,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
