tried to fix formating

--- a/Ulimate_inc_challenge.ipynb
+++ b/Ulimate_inc_challenge.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2050a60ec88>]"
+       "[<matplotlib.lines.Line2D at 0x18fdce7bc18>]"
       ]
      },
      "execution_count": 3,
@@ -366,22 +366,16 @@
     "        <li> Briefly discuss how Ultimate might leverage the insights gained from the model to improve its long term rider retention (again, a few sentences will suffice).</li>\n",
     "                \n",
     "    </ol>\n",
-    " </H3>\n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "<H3> Assumptions Made </H3>\n",
+    "    \n",
+    "    <H3> Assumptions Made </H3>\n",
     "\n",
     "The date of when the data was pulled is not given, so I cannot tell if they had a trip in the 30 days before that date, nor is a user ID given.\n",
     "\n",
     "Thus, I will assume:\n",
-    "1. That the most recent trip taken was the day the data was pulled\n",
-    "2. Each row represents a summary of a unique user "
+    "<li>That the most recent trip taken was the day the data was pulled</li>\n",
+    "<li>Each row represents a summary of a unique user </li>\n",
+    "\n",
+    "</div>\n"
    ]
   },
   {
@@ -395,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +484,7 @@
        "Text(0.5,1,'Average of Features for Active and Inactive Users')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
